// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Init About 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg page-container css-2b8hh-MuiContainer-root"
>
  <h3
    className="MuiTypography-root MuiTypography-h3 css-15t90v-MuiTypography-root"
  >
    About LA County Homeless Helper
  </h3>
  <div
    className="textType"
  >
    California has the largest amount of homless in the United States, the majority being in LA County. This website links together city homeless data, homeless resource data, and medicare/medicaid data. This disparate data can be used to analyze what locations have what services, and could be used to see what locations could use more help based on homless population density. This tool is designed for people wanting to help the homeless of LA County and also a tool for homeless people to see what resources are available for them.
  </div>
  <div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root modelCard css-1pv1rul-MuiPaper-root-MuiCard-root"
    >
      <button
        className="MuiButtonBase-root MuiCardActionArea-root css-11qrgr8-MuiButtonBase-root-MuiCardActionArea-root"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img modelImage css-13ikg24-MuiCardMedia-root"
          src="jamie.jpg"
        />
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Jamie Wong
          </div>
          <p
            className="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
          >
            Im a senior computer science student at UT Austin. I'm from Houston, Texas and I like to read and play poker
          </p>
        </div>
        <div
          className="MuiBox-root css-0"
          style={
            Object {
              "flexGrow": 2,
            }
          }
        />
        <hr
          className="MuiDivider-root MuiDivider-fullWidth css-x3v2x1-MuiDivider-root"
        />
        <div
          className="MuiStack-root css-14mldtp-MuiStack-root"
        >
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-nle9a3-MuiTypography-root"
            >
              Commits
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
          <hr
            className="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1tk1bks-MuiDivider-root"
          />
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-1digcxe-MuiTypography-root"
            >
              Issues
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
          <hr
            className="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1tk1bks-MuiDivider-root"
          />
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-1digcxe-MuiTypography-root"
            >
              Tests
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
        </div>
        <span
          className="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
        />
      </button>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root modelCard css-1pv1rul-MuiPaper-root-MuiCard-root"
    >
      <button
        className="MuiButtonBase-root MuiCardActionArea-root css-11qrgr8-MuiButtonBase-root-MuiCardActionArea-root"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img modelImage css-13ikg24-MuiCardMedia-root"
          src="sydney.jpg"
        />
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Sydney Schrader
          </div>
          <p
            className="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
          >
            I'm a Junior from Austin, TX. I like to go to Barton Springs and read in my free time.
          </p>
        </div>
        <div
          className="MuiBox-root css-0"
          style={
            Object {
              "flexGrow": 2,
            }
          }
        />
        <hr
          className="MuiDivider-root MuiDivider-fullWidth css-x3v2x1-MuiDivider-root"
        />
        <div
          className="MuiStack-root css-14mldtp-MuiStack-root"
        >
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-nle9a3-MuiTypography-root"
            >
              Commits
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
          <hr
            className="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1tk1bks-MuiDivider-root"
          />
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-1digcxe-MuiTypography-root"
            >
              Issues
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
          <hr
            className="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1tk1bks-MuiDivider-root"
          />
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-1digcxe-MuiTypography-root"
            >
              Tests
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
        </div>
        <span
          className="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
        />
      </button>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root modelCard css-1pv1rul-MuiPaper-root-MuiCard-root"
    >
      <button
        className="MuiButtonBase-root MuiCardActionArea-root css-11qrgr8-MuiButtonBase-root-MuiCardActionArea-root"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img modelImage css-13ikg24-MuiCardMedia-root"
          src="zach.jpg"
        />
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Zachary Voltz
          </div>
          <p
            className="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
          >
            I'm a senior CS student from Houston, Texas, and I've been programming since I was 9. Outside of programming, I like to read manga and rock climb
          </p>
        </div>
        <div
          className="MuiBox-root css-0"
          style={
            Object {
              "flexGrow": 2,
            }
          }
        />
        <hr
          className="MuiDivider-root MuiDivider-fullWidth css-x3v2x1-MuiDivider-root"
        />
        <div
          className="MuiStack-root css-14mldtp-MuiStack-root"
        >
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-nle9a3-MuiTypography-root"
            >
              Commits
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
          <hr
            className="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1tk1bks-MuiDivider-root"
          />
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-1digcxe-MuiTypography-root"
            >
              Issues
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
          <hr
            className="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1tk1bks-MuiDivider-root"
          />
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-1digcxe-MuiTypography-root"
            >
              Tests
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
        </div>
        <span
          className="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
        />
      </button>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root modelCard css-1pv1rul-MuiPaper-root-MuiCard-root"
    >
      <button
        className="MuiButtonBase-root MuiCardActionArea-root css-11qrgr8-MuiButtonBase-root-MuiCardActionArea-root"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img modelImage css-13ikg24-MuiCardMedia-root"
          src="pavan.jpg"
        />
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pavan Marathi
          </div>
          <p
            className="MuiTypography-root MuiTypography-body2 css-r40f8v-MuiTypography-root"
          >
            I'm a Junior from Houston, TX. I enjoy rock climbing and board games in my spare time.
          </p>
        </div>
        <div
          className="MuiBox-root css-0"
          style={
            Object {
              "flexGrow": 2,
            }
          }
        />
        <hr
          className="MuiDivider-root MuiDivider-fullWidth css-x3v2x1-MuiDivider-root"
        />
        <div
          className="MuiStack-root css-14mldtp-MuiStack-root"
        >
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-nle9a3-MuiTypography-root"
            >
              Commits
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
          <hr
            className="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1tk1bks-MuiDivider-root"
          />
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-1digcxe-MuiTypography-root"
            >
              Issues
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
          <hr
            className="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-1tk1bks-MuiDivider-root"
          />
          <div
            className="MuiStack-root css-18gv0ir-MuiStack-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body2 css-1digcxe-MuiTypography-root"
            >
              Tests
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1uwgr7b-MuiTypography-root"
            >
              <span
                className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
                style={
                  Object {
                    "height": undefined,
                    "width": "36px",
                  }
                }
              />
            </p>
          </div>
        </div>
        <span
          className="MuiCardActionArea-focusHighlight css-1v2exvi-MuiCardActionArea-focusHighlight"
        />
      </button>
    </div>
  </div>
  <div
    className="MuiStack-root css-1co5bop-MuiStack-root"
  >
    <div
      className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
    >
      LA Homeless Helper API Sources
    </div>
  </div>
  <div
    className="MuiStack-root css-pji5sw-MuiStack-root"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-t4rqyz-MuiPaper-root-MuiCard-root"
    >
      <img
        className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
        height="140"
        src="arcadia.jpg"
        width="140"
      />
      <div
        className="MuiBox-root css-i9gxme"
      >
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
          >
            City Data
          </div>
          <p
            className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
          >
            Api we used to get city data
          </p>
        </div>
      </div>
      <div
        className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
          href="https://geohub.lacity.org/datasets/lacounty::homeless-counts-2020/explore?location=33.759300%2C-117.328488%2C8.29&showTable=true"
          onBlur={[Function]}
          onFocus={[Function]}
          rel="noopener"
          target="_blank"
        >
          Go to 
          City Data
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-t4rqyz-MuiPaper-root-MuiCard-root"
    >
      <img
        className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
        height="140"
        src="volunteer.jpg"
        width="140"
      />
      <div
        className="MuiBox-root css-i9gxme"
      >
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
          >
            Resource Data
          </div>
          <p
            className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
          >
            Api we used to get resource data
          </p>
        </div>
      </div>
      <div
        className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
          href="https://geohub.lacity.org/datasets/lacounty::homeless-shelters-and-services/api"
          onBlur={[Function]}
          onFocus={[Function]}
          rel="noopener"
          target="_blank"
        >
          Go to 
          Resource Data
        </a>
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-t4rqyz-MuiPaper-root-MuiCard-root"
    >
      <img
        className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
        height="140"
        src="ssa.jpg"
        width="140"
      />
      <div
        className="MuiBox-root css-i9gxme"
      >
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
          >
            Medical Data
          </div>
          <p
            className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
          >
            Api we used to get medical locations
          </p>
        </div>
      </div>
      <div
        className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
      >
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
          href="https://geohub.lacity.org/datasets/lacounty::medicare-and-medicaid-offices/api"
          onBlur={[Function]}
          onFocus={[Function]}
          rel="noopener"
          target="_blank"
        >
          Go to 
          Medical Data
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiStack-root css-1co5bop-MuiStack-root"
  >
    <div
      className="MuiTypography-root MuiTypography-h4 MuiTypography-alignCenter MuiTypography-gutterBottom css-1trk376-MuiTypography-root"
    >
      Tools
    </div>
  </div>
  <div
    className="MuiStack-root css-pji5sw-MuiStack-root"
  >
    <div
      className="card-group"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="200"
          src="gitlabPic.png"
          width="100"
        />
        <div
          className="MuiBox-root css-0"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
            >
              Gitlab
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              Development Platform
            </p>
          </div>
        </div>
        <div
          className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            href="https://gitlab.com/sydneyschrader/cs373-idb-01"
            onBlur={[Function]}
            onFocus={[Function]}
            rel="noopener"
            target="_blank"
          >
            Go to 
            Gitlab
          </a>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="200"
          src="React-icon.jpg"
          width="100"
        />
        <div
          className="MuiBox-root css-0"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
            >
              React
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              Web UI Library
            </p>
          </div>
        </div>
        <div
          className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            href="https://react.dev/"
            onBlur={[Function]}
            onFocus={[Function]}
            rel="noopener"
            target="_blank"
          >
            Go to 
            React
          </a>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="200"
          src="bootstrapPic.jpg"
          width="100"
        />
        <div
          className="MuiBox-root css-0"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
            >
              Bootstrap
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              CSS Framework
            </p>
          </div>
        </div>
        <div
          className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            href="https://getbootstrap.com/"
            onBlur={[Function]}
            onFocus={[Function]}
            rel="noopener"
            target="_blank"
          >
            Go to 
            Bootstrap
          </a>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="200"
          src="flaskPic.jpg"
          width="100"
        />
        <div
          className="MuiBox-root css-0"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
            >
              Flask
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              Micro Web Framework
            </p>
          </div>
        </div>
        <div
          className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            href="https://flask.palletsprojects.com/en/3.0.x/"
            onBlur={[Function]}
            onFocus={[Function]}
            rel="noopener"
            target="_blank"
          >
            Go to 
            Flask
          </a>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="200"
          src="sqlAlchPic.jpg"
          width="100"
        />
        <div
          className="MuiBox-root css-0"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
            >
              SQLAlchemy
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              SQL Toolkit
            </p>
          </div>
        </div>
        <div
          className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            href="https://www.sqlalchemy.org/"
            onBlur={[Function]}
            onFocus={[Function]}
            rel="noopener"
            target="_blank"
          >
            Go to 
            SQLAlchemy
          </a>
        </div>
      </div>
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-1r5po6n-MuiPaper-root-MuiCard-root"
      >
        <img
          className="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
          height="200"
          src="postmanPic.jpg"
          width="100"
        />
        <div
          className="MuiBox-root css-0"
        >
          <div
            className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          >
            <div
              className="MuiTypography-root MuiTypography-h5 MuiTypography-alignCenter MuiTypography-gutterBottom css-68fhrh-MuiTypography-root"
            >
              Postman
            </div>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1pnmrwp-MuiTypography-root"
            >
              API documentation
            </p>
          </div>
        </div>
        <div
          className="MuiCardActions-root MuiCardActions-spacing css-1t6e9jv-MuiCardActions-root"
        >
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            href="https://documenter.getpostman.com/view/28474521/2s9YJZ3jad"
            onBlur={[Function]}
            onFocus={[Function]}
            rel="noopener"
            target="_blank"
          >
            Go to 
            Postman
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Init App 1`] = `
Array [
  <nav
    className="navbar"
  >
    <div
      className="logo-container"
    >
      <a
        href="/"
        style={
          Object {
            "textDecoration": "none",
          }
        }
      >
        <img
          alt="Logo"
          src="lahhLogo.png"
          style={
            Object {
              "height": "10%",
              "width": "10%",
            }
          }
        />
        <span>
          LACountyHomelessHelper
        </span>
      </a>
    </div>
    <div
      className="links-container"
    >
      <div
        className="link"
      >
        <a
          href="/home"
        >
          Home
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/about"
        >
          About
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/search"
        >
          Search
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/cities"
        >
          Cities
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/resources"
        >
          Resources
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/medical"
        >
          Medical
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/visualizations"
        >
          Visualizations
        </a>
      </div>
      <div
        className="link"
      >
        <a
          href="/providerVisualizations"
        >
          Provider Visualizations
        </a>
      </div>
    </div>
  </nav>,
  <div
    className="background"
  >
    <div
      className="title-container"
    >
      <h4
        className="title"
      >
        Los Angeles 
        <br />
         Homeless Helper
      </h4>
      <p
        className="lower-title"
        style={
          Object {
            "backgroundColor": "#ffa07b",
            "borderRadius": 10,
            "color": "white",
            "fontSize": "20px",
            "padding": 10,
          }
        }
      >
        Los Angeles Homeless Helper is a tool for both  people wanting to help homeless people around them and also a 
        <br />
        tool for homeless people to see what resources are available for them
      </p>
    </div>
    <div
      className="card-container container"
    >
      <div
        className="row"
      >
        <div
          className="col"
        >
          <div
            className="card"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffb091",
                "height": "27rem",
              }
            }
          >
            <div
              className="header-1 card-title h5"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              <b>
                Cities
              </b>
            </div>
            <img
              alt=""
              className="card-image-top"
              src="cities-image.jpg"
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
            <div
              className="card-body"
            >
              <a
                className="card-link btn btn-primary"
                disabled={false}
                href="/cities"
                name="homeCities"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Explore Cities in LA
              </a>
            </div>
          </div>
        </div>
        <div
          className="col"
        >
          <div
            className="card"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffb091",
                "height": "27rem",
              }
            }
          >
            <div
              className="header-1 card-title h5"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              <b>
                Resources
              </b>
            </div>
            <img
              alt=""
              className="card-image-top"
              src="resources-image.jpg"
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
            <div
              className="card-body"
            >
              <a
                className="card-link btn btn-primary"
                disabled={false}
                href="/resources"
                name="homeResources"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Explore Resources
              </a>
            </div>
          </div>
        </div>
        <div
          className="col"
        >
          <div
            className="card"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#ffb091",
                "height": "27rem",
              }
            }
          >
            <div
              className="header-1 card-title h5"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              <b>
                Medical
              </b>
            </div>
            <img
              alt=""
              className="card-image-top"
              src="medicare-image.jpg"
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
            <div
              className="card-body"
            >
              <a
                className="card-link btn btn-primary"
                disabled={false}
                href="/medical"
                name="homeMedical"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                Explore Medical Options
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Init City 1`] = `
<div
  className="box card"
  style={
    Object {
      "alignItems": "center",
      "height": "40rem",
      "padding": "0 10px",
      "width": "18rem",
    }
  }
>
  <div
    className="card-title"
  >
    <b>
      <span>
        <span
          className=""
        >
          City of Agoura Hills
        </span>
      </span>
    </b>
  </div>
  <img
    alt="City of Agoura Hills"
    className="card-image-top"
    onError={[Function]}
    src="arcadia.jpg"
    style={
      Object {
        "height": "30%",
        "width": "100%",
      }
    }
  />
  <div
    className="card-body"
  >
    <p>
      <div
        className="card-text"
      >
         Unsheltered Population:
      </div>
      2
      <br />
      <div
        className="card-text"
      >
         Sheltered Population:
      </div>
      0
       
      <br />
      <div
        className="card-text"
      >
         Total Homeless Population:
      </div>
      2
       
      <br />
      <div
        className="card-text"
      >
         Square Miles of City:
      </div>
      5.42772
       
      <br />
      <div
        className="card-text"
      >
         Density of Total Homeless Population:
      </div>
      0.368479
      <br />
    </p>
    <a
      className="card-link  btn btn-primary"
      disabled={false}
      href="/cities/City of Agoura Hills"
      name="City of Agoura Hills"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      View 
      City of Agoura Hills
    </a>
  </div>
</div>
`;

exports[`Init Medicare 1`] = `
<div
  className="box card"
  style={
    Object {
      "alignItems": "center",
      "height": "50rem",
      "width": "18rem",
    }
  }
>
  <div
    className="card-title"
  >
    <b>
      <span>
        <span
          className=""
        >
          Alafia Mental Health Center
        </span>
      </span>
    </b>
  </div>
  <img
    alt="Alafia Mental Health Center"
    className="card-image-top"
    onError={[Function]}
    src="ssa.jpg"
    style={
      Object {
        "height": "200px",
        "width": "100%",
      }
    }
  />
  <div
    className="card-body"
  >
    <p>
      <div
        className="card-text"
      >
         Name:
      </div>
      <span>
        <span
          className=""
        >
          Alafia Mental Health Center
        </span>
      </span>
      <br />
      <div
        className="card-text"
      >
         Address:
      </div>
      <span>
        <span
          className=""
        >
          11410 Avalon Blvd., 
        </span>
      </span>
      <br />
      <div
        className="card-text"
      >
         Hours:
      </div>
      <span>
        <span
          className=""
        >
          Not Found
        </span>
      </span>
      <br />
      <div
        className="card-text"
      >
         Phone Number:
      </div>
      <span>
        <span
          className=""
        >
          (323) 352 -6422
        </span>
      </span>
      <br />
      <div
        className="card-text"
      >
         City:
      </div>
      <span />
      <br />
    </p>
    <a
      className="card-link btn btn-primary"
      disabled={false}
      href="/medical/Alafia Mental Health Center"
      name="Alafia Mental Health Center"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      View 
      Alafia Mental Health Center
    </a>
  </div>
</div>
`;

exports[`Init NavBar 1`] = `
<nav
  className="navbar"
>
  <div
    className="logo-container"
  >
    <a
      href="/"
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <img
        alt="Logo"
        src="lahhLogo.png"
        style={
          Object {
            "height": "10%",
            "width": "10%",
          }
        }
      />
      <span>
        LACountyHomelessHelper
      </span>
    </a>
  </div>
  <div
    className="links-container"
  >
    <div
      className="link"
    >
      <a
        href="/home"
      >
        Home
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/about"
      >
        About
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/search"
      >
        Search
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/cities"
      >
        Cities
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/resources"
      >
        Resources
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/medical"
      >
        Medical
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/visualizations"
      >
        Visualizations
      </a>
    </div>
    <div
      className="link"
    >
      <a
        href="/providerVisualizations"
      >
        Provider Visualizations
      </a>
    </div>
  </div>
</nav>
`;

exports[`Init Resource 1`] = `
<div
  className="box card"
  style={
    Object {
      "alignItems": "center",
      "height": "50rem",
      "width": "18rem",
    }
  }
>
  <div
    className="header-1 card-title h5"
    style={
      Object {
        "height": "10%",
        "width": "100%",
      }
    }
  >
    <b>
      <span>
        <span
          className=""
        >
          1736 Family Crisis Center
        </span>
      </span>
    </b>
  </div>
  <img
    alt="1736 Family Crisis Center"
    className="card-image-top"
    onError={[Function]}
    src="volunteer.jpg"
    style={
      Object {
        "height": "30%",
        "width": "100%",
      }
    }
  />
  <div
    className="card-body"
  >
    <p>
      <div
        className="card-text"
      >
         Name:
      </div>
      <span>
        <span
          className=""
        >
          1736 Family Crisis Center
        </span>
      </span>
      <br />
      <div
        className="card-text"
      >
         Address:
      </div>
      <span>
        <span
          className=""
        >
          2116 Arlington Ave
        </span>
      </span>
      <br />
      <div
        className="card-text"
      >
         Hours:
      </div>
      <span>
        <span
          className=""
        >
          Monday through Friday, 8:30am to 5:30pm. Evenings and Saturdays by appointment.
        </span>
      </span>
      <br />
      <div
        className="card-text"
      >
         Phone Number:
      </div>
      <span>
        <span
          className=""
        >
          Not Found
        </span>
      </span>
      <br />
      <div
        className="card-text"
      >
         City:
      </div>
      <span />
      <br />
    </p>
    <a
      className="card-link btn btn-primary"
      disabled={false}
      href="/resources/1736 Family Crisis Center"
      name="1736 Family Crisis Center"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      View 
      1736 Family Crisis Center
    </a>
  </div>
</div>
`;
